--- a/css/product.css
+++ b/css/product.css
@@ -63,8 +63,8 @@
 }
     .imgCardd img {
         width: 100%;
-        height: auto;
-        object-fit: cover;
+        height: 100%;
+        object-fit: contain;
         object-position: center center;
         margin: 0 auto;
     }
@@ -94,8 +94,8 @@
 .imgdpro img {
     width: 100%;
     width: 100%;
-    height: auto;
-    object-fit: cover;
+    height: 100%;
+    object-fit: contain;
     object-position: center center;
 }
 
@@ -201,9 +201,10 @@
     display: flex;
     flex-direction: column;
     padding: 0 10px;
+    width: 100%;
 }
 .imgcardmenu{
-    width: 90%;
+    width: auto;
     height: 80px;
     display: flex;
     gap: 10px;
@@ -291,12 +292,12 @@
 .counter span{
     font-size: 20px;
 }
-    
+
 
 /* .nav-pills .nav-link.active, .nav-pills .show>.nav-link{
     color: #28AAE1;
     background-color: transparent;
-    
+
 } */
 
 
@@ -391,13 +392,14 @@
         margin-right:0 ;
     }
     .allcardmenue{
-        width: 60%;
+        width: 100%;
     }
     .allcardmenue p{
         width: 100%;
     }
     .cardmenue{
-        width: 370px;
+        width: 100%;
+        padding: 0;
     }
     .dpro {
         width: 100% !important;
@@ -422,7 +424,7 @@
         height: 80px;
     }
     .cardmenue{
-        width: 327px;
+        width: 100%;
     }
     .toppro{
         width: 100%;
@@ -441,7 +443,7 @@
         height: 120px !important;
     }
     .imgcardcart img{
-        height: 120px !important; 
+        height: 120px !important;
     }
     .cardcart  h5{
         font-size: 16px !important;
@@ -457,7 +459,7 @@
         height: 100px !important;
     }
     .imgcardcart img{
-        height: 100px !important; 
+        height: 100px !important;
     }
     .cardcart  h5{
         font-size: 16px !important;
