--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,9 @@ body{
     direction: rtl;
     background-color: #F5F7F8;
 }
+.textcardlap a::first-letter {
+    text-transform: capitalize;
+}
 a{
     text-decoration: none;
     color: rgba(63, 63, 63, 0.788);
@@ -28,7 +31,7 @@ a{
     .container, .container-md, .container-sm {
         max-width: 98%;
     }
-} 
+}
 
 
 
@@ -58,13 +61,12 @@ a{
     display: flex;
     align-items: center;
     gap: 10px;
-  
+    margin-top: 10px;
 }
 .h{
     gap: 16px;
 }
 .iconnav p{
-    margin-top: 15px;
     font-size: 14px;
 }
 .iconnav a i{
@@ -81,7 +83,7 @@ a{
     .nav1{
         display: flex;
     }
-   
+
 }
 
 /* @media (max-width:550px) {
@@ -257,7 +259,7 @@ a{
     color: #fff;
     font-weight: 600;
     padding-top: 5px;
-  
+
 }
 
 .navcenter3 li a{
@@ -318,7 +320,7 @@ a{
 
 .dropdown:hover .menudrop{
     display: block;
-   
+
 }
 
 .prodrop a{
@@ -422,7 +424,7 @@ ul.dropdown-menu.dropp.show{
 .navmobile.active{
     transform: translateX(0px);
     opacity: 1;
- 
+
 }
 @media (max-width:1104px) {
     .navmobile{
@@ -479,7 +481,7 @@ ul.dropdown-menu.dropp.show{
     border: 1px solid #28AAE1;
     direction: rtl;
     outline: none;
-  
+
   }
   .serchs{
     display: flex;
@@ -518,7 +520,15 @@ ul.dropdown-menu.dropp.show{
     margin-top: 8px;
 }
 
-
+.tit p:last-child {
+    font-size: 15px !important;
+    margin-top: 8px;
+    width: max-content;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
 
 
 
@@ -668,7 +678,8 @@ ul.dropdown-menu.dropp.show{
 }
 .imgcardlap img{
     width: 200px;
-    object-fit: cover;
+    height: 100%;
+    object-fit: contain;
     object-position: center center;
     position: absolute;
     bottom: 0;
@@ -707,8 +718,7 @@ ul.dropdown-menu.dropp.show{
     top: -20px;
     right: -20px;
     z-index: 7;
-    width: 75px;
-    height: 35px;
+padding:  0 8px;    height: 35px;
     display: flex;
     justify-content: center;
 }
@@ -726,7 +736,7 @@ ul.dropdown-menu.dropp.show{
     flex-direction: column;
     justify-content: space-between;
     /* min-height:177px; */
-    min-height:135px; 
+    min-height:140px;
 }
 
     .textcardlap h5 {
@@ -740,7 +750,7 @@ ul.dropdown-menu.dropp.show{
         color: rgba(0, 0, 0, 0.685);
         line-height: 130%;
         display: -webkit-box;
-        -webkit-line-clamp: 1;
+        -webkit-line-clamp: 2;
         -webkit-box-orient: vertical;
         overflow: hidden;
         direction:rtl;
@@ -752,6 +762,7 @@ ul.dropdown-menu.dropp.show{
     display: flex;
     gap: 7px;
     align-items: center;
+    margin-top: auto;
 }
 .monycardlap h4{
     font-weight: 600;
@@ -769,6 +780,7 @@ ul.dropdown-menu.dropp.show{
     color: #FFF !important;
     border-radius: 5px;
     text-align:center;
+    margin-bottom: 0;
 }
 
 .iconcardlaps{
@@ -797,7 +809,7 @@ ul.dropdown-menu.dropp.show{
     width: 28px;
     height: 19px;
     position: relative;
-    
+
 }
 .iconcardlap{
     background-color: #00000046;
@@ -951,22 +963,28 @@ ul.dropdown-menu.dropp.show{
         width: 200px;
     }
 }
-.footer .sotialicon{
+/* .footer .sotialicon{
     line-height: 10%;
-}
+} */
 
 .lincol{
     height: 100px;
     width: 2px;
     background-color: #ffffff9d;
 }
-
-.footer p{
+ .footer p{
     color: #fff;
-    margin-top: 20px;
+   margin-bottom: 0;
+   text-align: start;
 }
 
+.iconnav p{
+    margin-bottom: 0;
+}
 
+.nav1 {
+    padding-bottom: 10px;
+}
 .next{
     position: absolute;
     left: 10px;
@@ -1026,13 +1044,13 @@ ul.dropdown-menu.dropp.show{
     font-size: 50px;
     z-index: 99;
     transition: .3s;
-   
+
   }
 
   .scrollup:hover{
     transform: translateY(-.25rem);
     color: #002449;
-  }  
+  }
 
   /* Show Scroll Up*/
   .show-scroll{
@@ -1130,11 +1148,12 @@ input[type=number] {
 .monydd {
     display: flex ;
     justify-content: flex-start ;
+    align-items: center;
     padding: 0px 37px 10px 50px ;
     gap: 20px !important;
 }
 .left_imgpro{
- 
+
     margin-top: 110px;
     margin-left: 20px;
 }
@@ -1173,7 +1192,7 @@ input[type=number] {
 
   @media (max-width:500px) {
     .numphon p{
-        background-color: #707070;
+        background-color: none;
         font-size: 13px;
       }
   }
@@ -1230,7 +1249,7 @@ input[type=number] {
 .colorProduct{
     display: flex;
     gap: 5px;
-    
+
 }
 .colorP{
     width: 25px;
@@ -1239,3 +1258,149 @@ input[type=number] {
     border-radius: 50%;
     border: 1px solid #d6dce0a6;
 }
+
+
+.allcardstore .cardlap .textcardlap{
+    height: 194px;
+}
+.left_pro .imgcardmenu h4
+{
+    margin-top: 0;
+}
+.left_pro .imgcardmenu p
+{
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    margin-bottom: 0;
+}
+
+
+/* //////////////////////////////////////////// */
+
+
+.pagination{
+    display: flex;
+    justify-content:center;
+}
+
+.page-item:last-child .page-link {
+    border-radius:0;
+    border-top-left-radius: 8px;
+    border-bottom-left-radius: 8px;
+}
+.page-item:first-child .page-link {
+    border-radius:0;
+    border-top-right-radius: 8px;
+    border-bottom-right-radius: 8px;
+}
+    .active>.page-link, .page-link.active{
+        background-color:#28AAE1 !important;
+        border: var(--bs-pagination-border-width) solid var(--bs-pagination-border-color);
+    }
+    .page-link:focus{
+        outline: none;
+        box-shadow:none ;
+    }
+    .page-link{
+        color: #28AAE1;
+    }
+    .min-hight-body{
+        min-height: 525px;
+        display: flex;
+        align-items: center;
+    }
+
+    .bodyError{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: 100%;
+        color: #1A6BA6;
+
+    }
+
+    .bodyError img{
+        width: 100%;
+        max-width: 360px;
+    }
+
+    .bodyError p{
+        margin-top: 20px;
+        margin-bottom: 4px;
+        font-weight: bold;
+        font-size: 20px;
+    }
+
+    @media (max-width:500px) {
+        .bodyError img{
+            width: 100%;
+            max-width:300px;
+  }
+    }
+    .imgmap{
+        width: 100%;
+        height: 250px;
+        border-radius: 10px;
+        overflow:hidden;
+    }
+    .bodyErrorPage{
+        background: linear-gradient(266deg, rgba(26,107,166,1) 0%, rgba(40,170,225,1) 100%);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        min-height: 100vh;
+        color: #fff;
+    }
+
+    .allbodyErrorPage{
+        display: flex;
+        align-items: center;
+        gap: 30px;
+    }
+    .textErrorPage h1{
+        margin-bottom: 3px !important;
+    }
+    .textErrorPage h4{
+        margin-top: 0px !important;
+    }
+    .imgerror404{
+        width: 100%;
+        max-width: 450px;
+    }
+
+    .btnsError{
+        display: flex;
+        gap: 20px;
+    }
+
+    .btnError{
+        background-color: #28AAE1;
+        padding: 6px 15px;
+        color: #fff;
+        border-radius: 5px;
+        border: 1px solid transparent;
+    }
+    .btnErrorb{
+        background-color: transparent;
+        border: 1px solid #fff;
+    }
+
+    @media (max-width:991px) {
+        .allbodyErrorPage{
+            flex-direction: column;
+            text-align: center;
+        }
+        .imgerror404{
+            max-width: 320px;
+        }
+        .btnsError{
+            justify-content: center;
+        }
+        .textErrorPage h1{
+            font-size: 22px;
+        }
+    }
